--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   fl_chart: 0.63.0
   dropdown_button2: 2.3.9
   image_picker: 1.1.2
+  timeago: 3.7.1
 
 dev_dependencies:
   flutter_test:
