--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,13 +16,13 @@ dependencies:
   go_router: 15.0.0
   file_picker: 10.1.7
   provider: 6.1.2
-  dio: 5.7.0
   shared_preferences: 2.3.0
   intl: 0.20.2
   permission_handler: 11.3.1
   url_launcher: 6.1.10
   flutter_native_splash: 2.4.6
   http: 1.4.0
+  dio: ^5.4.0
   mime: 1.0.4
   cached_network_image: 3.3.1
   flutter_svg: 2.0.10
